fix tiny gap in strings at 4th fret on mobile

--- a/src/components/Fretboard.css
+++ b/src/components/Fretboard.css
@@ -360,6 +360,10 @@ span.incorrect {
     height: 100%;
     width: 16.672%;
   }
+  .fret:nth-child(4) .string {
+    /* fix tiny gap in strings on 4th fret */
+    height: calc(100% + 0.0021rem) !important;
+  }
   .string hr {
     top: 0 !important;
     left: 46%;
